<resources>
    <string name="app_name">BlogSample</string>

    <string name="bacon_ipsum">
        Bacon ipsum dolor sit amet venison shankle pork chop meatball tri-tip beef ribs turducken.
        Strip steak ball tip boudin shank, turducken leberkas pork chop beef ribs ham hock sausage
        frankfurter prosciutto doner ham. Bacon landjaeger ball tip, andouille chuck beef ribs jowl
        kevin tri-tip turkey biltong frankfurter sausage. Boudin pork belly meatloaf chicken cow
        tri-tip kielbasa shoulder. Pork loin pig boudin hamburger pastrami short ribs. Sirloin
        tongue pork loin chicken spare ribs bresaola pastrami.\n\n
        Tenderloin turducken pork chop, pork belly beef ribs brisket ham. Turducken landjaeger short
        loin capicola pancetta pork chop strip steak rump meatloaf brisket kevin doner short ribs
        salami. Beef prosciutto flank leberkas landjaeger swine. Fatback prosciutto sausage, jerky
        tail tongue hamburger jowl biltong shank pork belly swine filet mignon chicken ground round.
        Pork chop porchetta ground round tri-tip tail t-bone.\n\n
        Landjaeger rump bacon salami sausage pork loin pig brisket strip steak corned beef. Biltong
        sirloin meatloaf ribeye, bresaola cow chicken t-bone frankfurter andouille strip steak jerky
        capicola. Ribeye porchetta strip steak boudin. Kielbasa cow brisket pastrami ball tip
        tenderloin bresaola ham. Biltong andouille chuck ham hock jerky beef chicken, flank shankle
        ball tip venison porchetta kevin fatback kielbasa. Boudin tongue ground round, turkey pork
        belly salami corned beef pork tri-tip meatloaf sausage andouille strip steak pig. Spare ribs
        beef meatloaf rump sausage doner frankfurter.\n\n
        Fatback porchetta pork loin meatball, turducken pork chop drumstick boudin. Kevin tri-tip
        ground round corned beef, ribeye swine filet mignon salami pork spare ribs pork chop
        brisket. Filet mignon shankle t-bone bacon. Turducken capicola turkey porchetta kielbasa
        shank pork loin jerky venison tenderloin boudin ham hock ground round.</string>

    <string name="image_header">%1$s by %2$s</string>

    <string name="lottie_assets_json">Assets</string>
    <string name="lottie_net_json">URL</string>

    <string name="geoString">latlng: %1$f \n,long: %2$f \n,provider: %3$s</string>
    <string name="regeoString">country: %1$s \n,city: %2$s \n,sublocality: %3$s
        \n,address: %4$s \n,name: %5$s</string>
    <string name="errMsg">code: %1$f errMsg: %2$s</string>

    <string name="txt_nested_scroll_bg">背景View</string>
    <string name="txt_drag">可拖拽</string>
    <string name="txt_elastic_recycler_view">当前界面弹性</string>

    <string name="txt_lottie_load">URL 加载可能有点慢！</string>


    <string name="txt_dex_class_loader">DexClassLoader</string>
    <string name="txt_dex_priority">调整加载dex顺序</string>
    <string name="txt_copy_dex">push dex to local</string>
    <string name="txt_class_for_name">class.forName()</string>

    <string name="txt_bind_service">绑定服务</string>
    <string name="txt_unbind_service">取消服务</string>
    <string name="txt_pull">PULL</string>
    <string name="txt_push">PUSH</string>

    <string name="txt_hello_world">hello world</string>
    <string name="txt_simple">simple txt</string>
    <string name="txt_espresso">espresso</string>
    <string name="txt_test">test-></string>
    <string name="txt_intent">To Intent</string>
    <string name="middle">middle</string>
    <string name="txt_input">please input</string>
    <string name="txt_visible">visibility</string>
    <string name="txt_remove">remove</string>
    <string name="txt_open_dialog">open dialog</string>
    <string name="txt_show_dialog_item">dialog item</string>

    <string name="txt_load_svg_six">Draw \"六\"</string>
    <string name="txt_load_svg_one">Draw \"一\"</string>

    <string-array name="bodies_of_water">
        <item>Pacific Ocean</item>
        <item>Atlantic Ocean</item>
        <item>Indian Ocean</item>
        <item>Southern Ocean</item>
        <item>Arctic Ocean</item>
        <item>Mediterranean Sea</item>
        <item>Caribbean Sea</item>
        <item>South China Sea</item>
        <item>Bering Sea</item>
        <item>Gulf of Mexico</item>
        <item>Okhotsk Sea</item>
        <item>East China Sea</item>
        <item>Hudson Bay</item>
        <item>Japan Sea</item>
        <item>Andaman Sea</item>
        <item>North Sea</item>
        <item>Red Sea</item>
        <item>Baltic Sea</item>
    </string-array>
</resources>
