<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_copy_dex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_copy_dex"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btn_dex_class_loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dex_class_loader"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btn_class.forName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_class_for_name"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/btn_dex_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dex_priority"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <fragment
        android:name="com.blog.support.logger.LogFragment"
        android:id="@+id/log_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</LinearLayout>